@@ -492,6 +492,10 @@ OCaml 4.11
 
 ### Other libraries:
 
+- #9338: Dynlink: make sure *_units () functions report accurate information
+  before the first load.
+  (Daniel Bünzli, review by Xavier Leroy and Nicolás Ojeda Bär)
+
 - #9106: Register printer for Unix_error in win32unix, as in unix.
   (Christopher Zimmermann, review by David Allsopp)
 
